# raspi64

./: .gitattributes  .gitignore  .gitmodules  Bugs.md  CMakeLists.txt  CONTRIBUTING.md  Install.md  LICENSE  Makefile  README.md  build.sh  clean.sh  demo.cpp  install.md  install.sh  main.cpp  package.sh
.github/workflows/: cmake.yml  raspberrypi.yml
cmake/: FindSDL2.cmake
docs/: index.html  install.html
help_data/BASIC/: ABS  ADDITION  AND  ASC  BACK  CALL  CEIL  CHR  CLASS  CLEAR  CLONE  COS  DEF  DICT  DIM  DIVISION  DRAW  DRAW_BACKUP_227495  DRAW_CIRCLE  DRAW_CLEAR  DRAW_LINE  DRAW_LOCAL_227495  DRAW_PIXEL  DRAW_RECT  DRAW_REMOTE_227495  DRAW_TEXT  ELSE  ELSEIF  END  ENDCLASS  ENDIF  EXIST  EXIT  FIX  FOR  GET  GLEICH  GROESSER  GROESSER GLEICH  IF  (+49 more)
help_data/Common/: Console  Hilfefenster  Navigation
help_data/Lua/: assert  clear  draw  draw_circle  draw_line  draw_pixel  draw_rect  draw_text  error  ipairs  lua_draw  lua_sleep  next  pairs  pcall  print  rawequal  rawget  rawlen  rawset  sleep  tonumber  tostring  type  warn  xpcall
help_data/Lua/coroutine/: close  create  isyieldable  resume  running  status  wrap  yield
help_data/Lua/io/: read  write
help_data/Lua/math/: abs  acos  asin  atan  ceil  cos  deg  floor  fmod  huge  max  maxinteger  min  mininteger  modf  pi  pow  rad  random  sin  sqrt  tointeger  type  ult
help_data/Lua/os/: date  difftime  time
help_data/Lua/string/: byte  char  find  format  gmatch  gsub  len  lower  match  rep  reverse  sub  upper
help_data/Lua/table/: concat  insert  move  pack  remove  sort  unpack
help_data/basic/: ADDITION  AND  ASIN  ATAN  CLEAR  DO  ELSEIF  END  ENDCLASS  ENDDEF  FALSE  FIX  FLOOR  GET  GLEICH  GROESSER GLEICH  INDEX_OF  INPUT  INSERT  ITERATOR  KLEINER  LAMBDA  LEFT  LOG  MID  MOD  MOVE_NEXT  NEXT  NIL  REFLECT  REM  STR  TRUE  TYPE  UNGLEICH  WEND
help_data/basic/commands/: ACOS.txt  ASC.txt  BACK.txt  CALL.txt  DEF.txt  DIVISION.txt  ELSE.txt  ENDIF.txt  EXIST.txt  EXIT.txt  EXP.txt  FOR.txt  GOSUB.txt  GOTO.txt  GROESSER.txt  IF.txt  IMPORT.txt  KLEINER GLEICH.txt  LET.txt  LIST.txt  MULTIPLIKATION.txt  NEW.txt  NOT.txt  OR.txt  POP.txt  PRINT.txt  PUSH.txt  REMOVE.txt  RETURN.txt  RIGHT.txt  RND.txt  ROUND.txt  SGN.txt  SORT.txt  SUBTRAKTION.txt  TAN.txt  VAR.txt  WHILE.txt
help_data/common/: Console.txt  Navigation.txt
help_data/lua/: assert  ipairs  next  rawget  tonumber  type  xpcall
help_data/lua/coroutine/: close  wrap
help_data/lua/io/: write
help_data/lua/math/: abs  acos  atan  cos  floor  maxinteger  mininteger  rad  random
help_data/lua/os/: date  time
help_data/lua/string/: char  find  gmatch  len  lower  rep  reverse  sub  upper
help_data/lua/table/: concat  insert  pack  sort
lib/imgui/: .editorconfig
lib/lua-5.4/: linit.c  loslib.c
lib/my_basic/: my_basic.c  my_basic.h
saves/: basic_summe.bas  drawer.lua  example_colors.lua  example_colors_2.lua  example_colors_3.lua  example_colors_4.lua  example_colors_5.lua  example_colors_6.lua  example_colors_linear.lua  example_colors_rainbow.lua  example_draw.bas  example_draw.lua  example_echo.bas  example_echo.lua  example_start.lua  parabola.lua  pong.lua
src/: Gui.cpp  Gui.hpp  HelpSystem.cpp  HelpSystem.hpp  Kommunikationsstelle.cpp  Kommunikationsstelle.hpp  Schnittstelle.cpp  Schnittstelle.hpp  config.hpp  debug.h  main.cpp  types.hpp
src/gui/: Gui.cpp  Gui.hpp  config.hpp
src/gui/extension/: TextEditorLanguageExtension.cpp  TextEditorLanguageExtension.hpp
src/gui/ui/: MainMenuBar.cpp  MainMenuBar.hpp  UiElement.cpp  UiElement.hpp
src/gui/ui/window/: ConsoleWindow.cpp  ConsoleWindow.hpp  ConsoleWindowHandler.cpp  ConsoleWindowHandler.hpp  EditorWindow.cpp  EditorWindow.hpp  EditorWindowHandler.cpp  EditorWindowHandler.hpp  GraphicWindow.cpp  GraphicWindow.hpp  GraphicWindowHandler.cpp  GraphicWindowHandler.hpp  HelpWindow.cpp  HelpWindow.hpp  HelpWindowHandler.cpp  HelpWindowHandler.hpp
src/gui/ui/window/base/: Window.cpp  Window.hpp  WindowHandler.cpp  WindowHandler.hpp
src/gui/ui/window/dialog/: ChangeLangModeDialogWindow.cpp  ChangeLangModeDialogWindow.hpp  ShutdownDialogWindow.cpp  ShutdownDialogWindow.hpp
src/plugins/: Plugin.cpp  Plugin.hpp
src/plugins/basic/: BasicPlugin.cpp  BasicPlugin.hpp
src/plugins/lua/: LuaPlugin.cpp  LuaPlugin.hpp  lua_functions.cpp  lua_functions.hpp  lua_iolib.c  lua_plugin.cpp  lua_plugin.hpp
src/ui/: MainMenuBar.cpp  MainMenuBar.hpp
src/ui/window/: ConsoleWindow.cpp  ConsoleWindow.hpp  ConsoleWindowHandler.cpp  ConsoleWindowHandler.hpp  EditorWindow.cpp  EditorWindow.hpp  EditorWindowHandler.cpp  EditorWindowHandler.hpp  GraphicWindow.cpp  GraphicWindow.hpp  HelpWindow.cpp  ShutdownDialogWindow.cpp
src/ui/window/base/: Window.cpp  Window.hpp
website/: install.html
